adjusting linting rules on custom css

--- a/lib/sass/custom.scss
+++ b/lib/sass/custom.scss
@@ -2,6 +2,8 @@
 $lang-front: left;
 // scss-lint:disable SelectorDepth
 // scss-lint:disable NestingDepth
+// scss-lint:disable QualifyingElement
+// scss-lint:disable ImportantRule
 
 // CUSTOM FOR PREVIEW
 // ----------------------------
